<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/list_back"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnClosePrivacy"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#884741"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/x"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/privacy_policy"
        android:textColor="@color/blacky"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/link_to_privacy_policy" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/version_1"
        android:textColor="#4E342E" />
</LinearLayout>