<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_back"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ivBackmoi"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#9E4848"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="4dp"
            android:paddingBottom="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_back"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/tvTopicmoi"
            card_view:layout_constraintHorizontal_bias="0.01"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvTopicmoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/moment_of_inertia"
            android:textSize="28sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFormulas"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"

        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/formulas"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvQuiz"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        card_view:cardBackgroundColor="@color/cardview_light_background"

        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:text="@string/inertias_quiz"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</LinearLayout>